--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/5
+https://t.me/c/2356711235/40
 " target="_blank"><b>
-LEMBRETES
+NOTÍCIAS QUE GUARDO
 </b><FONT COLOR="#FF0000"> (
 OUTROS
 )</FONT></a></li>
@@ -231,11 +231,11 @@ VÍDEOS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2356711235/5
 " target="_blank"><b>
-NOME🔴
+LEMBRETES
 </b><FONT COLOR="#FF0000"> (
-VERMELHO🔴
+OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 
