--- a/index.html
+++ b/index.html
@@ -134,6 +134,24 @@ Telegram
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
+<li><a href="index_arquivos/
+LinkstelegrampremiumTodos/index.html
+" target="_blank"><b>
+Links telegram premium
+</b><FONT COLOR="#FF0000"> (
+Todos
+)</FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+" target="_blank"><b>
+NOME🔴
+</b><FONT COLOR="#FF0000"> (
+VERMELHO🔴
+)</FONT></a></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
 <li><a href="
 https://t.me/c/2356711235/2
 " target="_blank"><b>
