--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@ https://t.me/c/2356711235/1
 AVISOS
 </b><FONT COLOR="#FF0000"> (
 Telegram
-)</FONT></a></li>
+)</FONT></a><hr/></li>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="index_arquivos/
 LinkstelegrampremiumTodos/index.html
 " target="_blank"><b>
-Links telegram premium
-</b><FONT COLOR="#FF0000"> (
+<mark>Links telegram premium</mark>
+</b><FONT COLOR="#0a6b0b"> (
 Todos
-)</FONT></a></li>
-<!------------------------------------------------------------------>
+)</FONT></a><hr/></li>
+<!------------------------------------
 <li><a href="
 LINK🔴
 " target="_blank"><b>
@@ -149,6 +149,10 @@ NOME🔴
 </b><FONT COLOR="#FF0000"> (
 VERMELHO🔴
 )</FONT></a></li>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<FONT COLOR="#AAA">PRECISA ATUALIZAR</FONT> 👇
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
