--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@ Telegram
 <li><a href="
 LINK🔴
 " target="_blank"><b>
-NOME🔴
+HTML
 </b><FONT COLOR="#FF0000"> (
-VERMELHO🔴
+Telegram
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
