--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@ VERMELHO🔴
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
+https://jbmsantos0398.github.io/BUSCA-LINKS-santos0398/
+" target="_self"><b>
+BUSCA-LINKS-santos0398
+</b><FONT COLOR="#FF0000"> (
+Github
+)</FONT></a></li>
+<!------------------------------------------------------------------>
+<li><a href="
 https://t.me/c/2356711235/2
 " target="_blank"><b>
 SITES
@@ -269,7 +277,7 @@ Telegram
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/+P749JPJ5C6lmYTcx
 " target="_blank"><b>
 HTML
 </b><FONT COLOR="#FF0000"> (
