--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/1
+LINK🔴
 " target="_blank"><b>
 AVISOS
 </b><FONT COLOR="#FF0000"> (
@@ -165,7 +165,7 @@ VERMELHO🔴
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/2
+LINK🔴
 " target="_blank"><b>
 SITES
 </b><FONT COLOR="#FF0000"> (
@@ -173,7 +173,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/11
+LINK🔴
 " target="_blank"><b>
 RÁDIAS
 </b><FONT COLOR="#FF0000"> (
@@ -181,7 +181,7 @@ AUDIOS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/8
+LINK🔴
 " target="_blank"><b>
 SAÚDE
 </b><FONT COLOR="#FF0000"> (
@@ -189,7 +189,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/7
+LINK🔴
 " target="_blank"><b>
 ARQUIVOS ZIP PARA DOWNLOAD
 </b><FONT COLOR="#FF0000"> (
@@ -197,7 +197,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/40
+LINK🔴
 " target="_blank"><b>
 NOTÍCIAS QUE GUARDO
 </b><FONT COLOR="#FF0000"> (
@@ -205,7 +205,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/3
+LINK🔴
 " target="_blank"><b>
 MÚSICAS MP3
 </b><FONT COLOR="#FF0000"> (
@@ -213,7 +213,7 @@ AUDIOS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/21
+LINK🔴
 " target="_blank"><b>
 LINKS
 </b><FONT COLOR="#FF0000"> (
@@ -221,7 +221,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/23
+LINK🔴
 " target="_blank"><b>
 PDF
 </b><FONT COLOR="#FF0000"> (
@@ -229,7 +229,7 @@ DOCUMENTOS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/27
+LINK🔴
 " target="_blank"><b>
 TEMAS E EXTENÇÕES
 </b><FONT COLOR="#FF0000"> (
@@ -237,7 +237,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/28
+LINK🔴
 " target="_blank"><b>
 APK E PROGRAMAS
 </b><FONT COLOR="#FF0000"> (
@@ -245,7 +245,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/35
+LINK🔴
 " target="_blank"><b>
 FILMES
 </b><FONT COLOR="#FF0000"> (
@@ -253,7 +253,7 @@ VÍDEOS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/34
+LINK🔴
 " target="_blank"><b>
 VÍDEOS
 </b><FONT COLOR="#FF0000"> (
@@ -261,7 +261,7 @@ VÍDEOS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/c/2356711235/5
+LINK🔴
 " target="_blank"><b>
 LEMBRETES
 </b><FONT COLOR="#FF0000"> (
@@ -269,7 +269,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/santospublico2025
+LINK🔴
 " target="_blank"><b>
 SICRONIZADO PÚBLICO
 </b><FONT COLOR="#FF0000"> (
@@ -277,7 +277,7 @@ Telegram
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-https://t.me/+P749JPJ5C6lmYTcx
+LINK🔴
 " target="_blank"><b>
 HTML
 </b><FONT COLOR="#FF0000"> (
