--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://jbmsantos12164.github.io/AVISOS/
 " target="_blank"><b>
 AVISOS
 </b><FONT COLOR="#FF0000"> (
-Telegram
+LEIA COM ATENÇÃO 
 )</FONT></a><hr/></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -165,7 +165,7 @@ VERMELHO🔴
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2524253631/81
 " target="_blank"><b>
 SITES
 </b><FONT COLOR="#FF0000"> (
@@ -173,7 +173,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2570149079/2
 " target="_blank"><b>
 RÁDIAS
 </b><FONT COLOR="#FF0000"> (
@@ -181,7 +181,7 @@ AUDIOS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2407223965/525
 " target="_blank"><b>
 SAÚDE
 </b><FONT COLOR="#FF0000"> (
@@ -189,7 +189,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2443250533/2
 " target="_blank"><b>
 ARQUIVOS ZIP PARA DOWNLOAD
 </b><FONT COLOR="#FF0000"> (
@@ -197,7 +197,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2573811296/30
 " target="_blank"><b>
 NOTÍCIAS QUE GUARDO
 </b><FONT COLOR="#FF0000"> (
@@ -205,7 +205,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2570149079/3
 " target="_blank"><b>
 MÚSICAS MP3
 </b><FONT COLOR="#FF0000"> (
@@ -213,7 +213,7 @@ AUDIOS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2524253631/8
 " target="_blank"><b>
 LINKS
 </b><FONT COLOR="#FF0000"> (
@@ -221,7 +221,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2439854339/2
 " target="_blank"><b>
 PDF
 </b><FONT COLOR="#FF0000"> (
@@ -229,7 +229,7 @@ DOCUMENTOS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2524253631/19
 " target="_blank"><b>
 TEMAS E EXTENÇÕES
 </b><FONT COLOR="#FF0000"> (
@@ -237,7 +237,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2524253631/4
 " target="_blank"><b>
 APK E PROGRAMAS
 </b><FONT COLOR="#FF0000"> (
@@ -245,7 +245,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2407223965/4
 " target="_blank"><b>
 FILMES
 </b><FONT COLOR="#FF0000"> (
@@ -253,7 +253,7 @@ VÍDEOS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2407223965/2
 " target="_blank"><b>
 VÍDEOS
 </b><FONT COLOR="#FF0000"> (
@@ -261,7 +261,7 @@ VÍDEOS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2524253631/11
 " target="_blank"><b>
 LEMBRETES
 </b><FONT COLOR="#FF0000"> (
@@ -269,7 +269,7 @@ OUTROS
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/SICRONIZADOPUBLICOPREMIUM
 " target="_blank"><b>
 SICRONIZADO PÚBLICO
 </b><FONT COLOR="#FF0000"> (
@@ -277,7 +277,7 @@ Telegram
 )</FONT></a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+https://t.me/c/2439854339/7
 " target="_blank"><b>
 HTML
 </b><FONT COLOR="#FF0000"> (
