--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ VERMELHO🔴
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
-<FONT COLOR="#AAA">PRECISA ATUALIZAR</FONT> 👇
+<FONT COLOR="#AAA">ATUALIZADO</FONT> 👇
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
